Updated System Structure